gateway-class/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-envoy-to-frontend
  namespace: frontend # Must go into your app namespace
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system # Matches your infrastructure namespace
  to:
    - group: "" 
      kind: Service

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: frontend
spec:
  parentRefs:
    - name: external-alb-gateway
      namespace: envoy-gateway-system
      sectionName: http
  # hostnames:
  #   - "example.com"
  rules:
    # 1. Specific API Path -> Goes to backend service
    - matches:
        - path:
            type: PathPrefix
            value: /frontend-app
      filters:
        - type: URLRewrite # <--- Add this rewrite filter block
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: / # <--- Strip /frontend-app and change
      backendRefs:
        - name: frontend-app
          namespace: frontend # Routes across namespaces seamlessly
          port: 80 

    # # 2. Specific Auth Path -> Goes to auth service
    # - matches:
    #     - path:
    #         type: PathPrefix
    #         value: /auth
    #   backendRefs:
    #     - name: auth-service
    #       namespace: auth
    #       port: 9000

    # 3. Catch-All Path -> Goes to your frontend app
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-app
          namespace: frontend # Routes across namespaces seamlessly
          port: 80
